--- a/index.css
+++ b/index.css
@@ -65,9 +65,12 @@ hr {
       0 0 151px #5271ff;
 }
 
+h1, p {
+  animation: pulsate 0.11s ease-in-out infinite alternate;     
+}
+
 h1 {
   font-size: 5.2rem;
-  animation: pulsate 0.11s ease-in-out infinite alternate;     
 }
 
 @keyframes pulsate {
